[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/PNG/Zombie 1/zoimbie1_stand.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Zombie.gd" type="Script" id=2]
[ext_resource path="res://Entities/PNG/emotes/Vector/Style 8/emote_cross.png" type="Texture" id=3]
[ext_resource path="res://Entities/PNG/emotes/Vector/Style 8/emote_cash.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "cash",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 93.5307

[sub_resource type="CircleShape2D" id=3]
radius = 30.5735

[sub_resource type="CircleShape2D" id=4]
radius = 13.3998

[node name="Zombie" type="KinematicBody2D" groups=[
"zombies",
]]
collision_layer = 32
collision_mask = 34
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.314981, -0.31498 )
frames = SubResource( 1 )
animation = "stand"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -6.75, 21.75, 2.75, 22.25, 8, 18, 7.75, 9.25, 12.25, 0.5, 12.25, -2.25, 9.25, -7, 8.5, -14.5, 4, -22, -8.25, -21.5, -13.5, -5.25, -13.5, 5.5, -9.75, 12.25 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )

[node name="Kill_Area" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kill_Area"]
visible = false
shape = SubResource( 3 )

[node name="Money_Area" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Money_Area"]
visible = false
shape = SubResource( 4 )
disabled = true

[node name="Kill_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Kill_Area" to="." method="_on_Kill_Area_body_entered"]
[connection signal="body_exited" from="Kill_Area" to="." method="_on_Kill_Area_body_exited"]
[connection signal="body_entered" from="Money_Area" to="." method="_on_Money_Area_body_entered"]
[connection signal="timeout" from="Kill_Timer" to="." method="_on_Kill_Timer_timeout"]
